--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -161,15 +161,21 @@ ul.navbar-nav {
 
 }
 
+ 
+@import url(https://fonts.googleapis.com/css?family=Catamaran" rel="stylesheet);
+@import url("https://fonts.googleapis.com/css?family=Dancing+Script");
+
+
+
 
 .label-container {
-  width: 80%;
   margin-top: 0.5rem;
   -webkit-flex-basis: 100%;
   display: -webkit-flex;
   -webkit-flex-wrap: nowrap;
   -webkit-justify-content: space-between;
   margin-bottom: 50px;
+    position:relative;
 }
 
 .label-slider {
@@ -179,9 +185,10 @@ ul.navbar-nav {
   text-align: center;
   -webkit-tap-highlight-color: transparent;
   cursor: pointer;
+  position: absolute;
 }
 
-.label-slider:nth-child(1) {
+/*.label-slider:nth-child(1) {
   padding-left: 0px;
 }
 
@@ -199,10 +206,34 @@ ul.navbar-nav {
 
 .label-slider:nth-child(5) {
   padding-left: 32px;
+}*/
+.label-slider:nth-child(1) {
+  left:0;
 }
 
+.label-slider:nth-child(2) {
+  left:25%;
+  transform: translateX(-25%);
+  margin-left: 1%;
+}
+
+.label-slider:nth-child(3) {
+  left:50%;
+  transform: translateX(-50%);
+  margin-left: .5%;
+}
+
+.label-slider:nth-child(4) {
+  right: 25%;
+  transform: translateX(25%);
+  margin-left: 1%;
+}
+
+.label-slider:nth-child(5) {
+  right:0;
+}
 .slider-container {
-  width: 80%;
+  width: 100%;
   margin-top: 5px;
 }
 
@@ -255,34 +286,6 @@ input[type="range"]::-moz-range-thumb {
 
 input[type="range"]:focus {
   outline: none;
-}
-
-.ticks {
-   font-family: "Catamaran", sans-serif;
-  color: #3949ab;
-  font-size: 14px;
-  font-weight: 700;
-    display: flex;
-    justify-content: space-between;
-    height: 6px;
-    margin: 0 10px 0 15px;
-    counter-reset: count -1;
-}
-.ticks > div {
-  height: 100%;
-  width: 1px;
-  background: silver;
-  counter-increment: count 1;
-}
-.ticks > div:nth-child(5n - 4) {
-  height: 200%;
-}
-.ticks > div:nth-child(5n - 4)::before {
-  display: block;
-  content: counter(count,decimal);
-  transform: translate(-50%, 100%);
-  text-align: center;
-  width: 16px;
 }
 /* Retina-ize images/icons */
 
